--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - 'v*'
-       workflow_dispatch:
+  workflow_dispatch:  # permite rodar manualmente
 
 jobs:
   build:
