--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -35,15 +35,15 @@ jobs:
 
     - name: Build Kernel
       run: |
-        cd Kernel/kernel_platform/common   # topo do kernel onde o Makefile está
+        cd Kernel/kernel_platform/common   # topo do kernel
         echo "Starting kernel build..."
-        make O=$O KBUILD_DEFCONFIG=arch/arm64/configs/gki_defconfig
+        # Gera o .config corretamente usando gki_defconfig
+        make O=$O gki_defconfig
         make -j$(nproc) O=$O
         echo "Kernel build finished!"
 
     - name: Package Kernel
       run: |
-        echo "Packaging kernel..."
         cd Kernel/kernel_platform/common
         zip -r SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip $O
         echo "Package created: SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip"
