--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -1,5 +1,6 @@
 name: Build SM-M556B Kernel
 
+# Gatilhos: push em tags "v*" e execução manual
 on:
   push:
     tags:
@@ -22,7 +23,8 @@ jobs:
         sudo apt update
         sudo apt install -y \
           bc build-essential libncurses5-dev libncurses-dev \
-          flex bison zip curl wget ccache git make python3 python3-distutils \
+          flex bison zip curl wget ccache git make \
+          python3 python3-dev python3-setuptools \
           libssl-dev libc6-dev libelf-dev
 
     - name: Setup Clang stock
@@ -34,7 +36,7 @@ jobs:
         export O=out
         echo "Clang PATH set to $PATH"
 
-    - name: Build Kernel
+    - name: Kernel build
       run: |
         cd Kernel/kernel_platform/common
         echo "Starting kernel build..."
@@ -42,15 +44,20 @@ jobs:
         make -j$(nproc) O=$O
         echo "Kernel build finished!"
 
-    - name: Package Kernel
+    - name: Package kernel
       run: |
         cd Kernel/kernel_platform/common
-        zip -r SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip $O
+        mkdir -p release
+        cp $O/arch/arm64/boot/Image.gz-dtb release/Image.gz-dtb
+        cp $O/arch/arm64/boot/dts/vendor/qcom/*.dtb release/ -r || true
+        cp $O/arch/arm64/boot/dtbo.img release/ || true
+        cd release
+        zip -r SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip *
         echo "Package created: SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip"
 
     - name: Publish Release
       uses: softprops/action-gh-release@v1
       with:
-        files: Kernel/kernel_platform/common/SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip
+        files: Kernel/kernel_platform/common/release/SM-M556B_14_KERNEL_${GITHUB_REF##*/}.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
